Added footer and improved styling

--- a/ethics.html
+++ b/ethics.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ethics</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ethics in IT</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="ethics.html">Ethics</a></li>
+        </ul>
+    </nav>
+    <h1>Ethics in IT</h1>
+    <p>Here are some important ethical guidelines for IT professionals:</p>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="ethics.html">Ethics</a></li>
+        <li>Respect user privacy and data security.</li>
+        <li>Maintain transparency in data usage.</li>
+        <li>Ensure fairness and avoid bias in algorithms.</li>
     </ul>
-  </nav>
-  <h1>Ethics in IT</h1>
-  <p>Here are some important ethical guidelines for IT professionals:</p>
-  <ul>
-    <li>Respect user privacy and data security.</li>
-    <li>Maintain transparency in data usage.</li>
-    <li>Ensure fairness and avoid bias in algorithms.</li>
-  </ul>
+    <p>Sources:</p>
+    <ul>
+        <li><a href="https://www.acm.org/code-of-ethics" target="_blank">ACM Code of Ethics</a></li>
+        <li><a href="https://www.ieee.org/about/corporate/governance/p7-8.html" target="_blank">IEEE Code of Ethics</a></li>
+    </ul>
+<footer>
+    <p>© 2024 Maria Gomez. All rights reserved.</p>
+</footer>
 </body>
 </html>
