--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
   </nav>
   <h1>Welcome to My Website</h1>
   <p>This is the home page of my GitHub Pages website.</p>
+<footer>
+    <p>© 2024 Maria Gomez. All rights reserved.</p>
+</footer>
 </body>
 </html>
