--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div class="hero">
+  <h1>Welcome to My Website</h1>
+</div>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
