--- a/index.html
+++ b/index.html
@@ -7,19 +7,25 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="hero">
-  <h1>Welcome to My Website</h1>
-</div>
+  <!-- Hero Section -->
+  <div class="hero">
+    <h1>Welcome to My Website</h1>
+  </div>
+
+  <!-- Navigation Bar -->
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="ethics.html">Ethics</a></li>
     </ul>
   </nav>
-  <h1>Welcome to My Website</h1>
+
+  <!-- Main Content -->
   <p>This is the home page of my GitHub Pages website.</p>
-<footer>
+
+  <!-- Footer -->
+  <footer>
     <p>© 2024 Maria Gomez. All rights reserved.</p>
-</footer>
+  </footer>
 </body>
 </html>
