--- a/index.html
+++ b/index.html
@@ -1,31 +1,32 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Hero Section -->
-  <div class="hero">
-    <h1>Welcome to My Website</h1>
-  </div>
+    <!-- Hero Section -->
+    <div class="hero">
+        <h1>Welcome to My Website</h1>
+    </div>
 
-  <!-- Navigation Bar -->
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="ethics.html">Ethics</a></li>
-    </ul>
-  </nav>
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="ethics.html">Ethics</a></li>
+        </ul>
+    </nav>
 
-  <!-- Main Content -->
-  <p>This is the home page of my GitHub Pages website.</p>
+    <!-- Main Content -->
+    <p>This is the home page of my GitHub Pages website.</p>
 
-  <!-- Footer -->
-  <footer>
-    <p>© 2024 Maria Gomez. All rights reserved.</p>
-  </footer>
+    <!-- Footer -->
+    <footer>
+        <p>© 2024 Maria Gomez. All rights reserved.</p>
+    </footer>
 </body>
 </html>
+
